Updated code using enumerator for charsets and other small improvements